--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 deploy:
   provider: heroku
-  app: supermarket-gowtham
+  app: supermarketapp-gowtham
   api_key:
     secure: "e8859334-e1d5-4019-8797-40087bf651a5"
 script:
