--- a/manifest.yml
+++ b/manifest.yml
@@ -4,4 +4,4 @@ applications:
   buildpack: java_buildpack
   memory: 1G
   instances: 1
-  path: target/supermarketapp-0.0.1-SNAPSHOT.jar
+  path: target/supermarketapp-0.0.1-SNAPSHOT.war
