--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
 		<dependency>
 			<groupId>com.oracle.ojdbc</groupId>
 			<artifactId>ojdbc8</artifactId>
+			  <version>19.3.0.0</version>
 			<scope>runtime</scope>
 		</dependency>
 		
